--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         />
         <div class="dancefloor" id="dancefloor"></div>
 
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
