Added overhead lights.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
-        <input
-            type="file"
-            id="audio-file"
-            accept="audio/mpeg, audio/ogg, audio/*"
-        />
+        <div id="file-input">
+            <input
+                type="file"
+                id="audio-file"
+                accept="audio/mpeg, audio/ogg, audio/*"
+            />
+        </div>
         <div class="dancefloor" id="dancefloor"></div>
 
         <script src="index.js" type="module"></script>
